apps/course-app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: course-app

  template:
    metadata:
      labels:
        app: course-app

    spec:
      containers:
        - name: app
          image: Monah0/course-app

          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080

          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "256Mi"
