apps/course-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: course-app

spec:
  type: ClusterIP

  selector:
    app: course-app

  ports:
    - port: 80
      targetPort: 8080
