apps/course-app/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: course-app

spec:
  ingressClassName: nginx

  rules:
    - host: course-app.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: course-app
                port:
                  number: 80
